# Kubernetes_ArgoCD_Rollout_Observability

./: .dockerignore  .gitignore  .log.swp  Dev-Notes  Dev-Notes.md  Dockerfile  Guide-DockerOptimizationSteps.md  Makefile  Makefile_backup  Readme  database.py  db_test.py  docker-compose-prod.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  log  main.py  mypy.ini  pyproject.toml
.github/: Readme
.github/workflows/: Guide-Stack-And-PromotionalModel  cd.yml  ci-cd.yml  ci-cd.yml_back  ci.yml  ci.yml_back  grafana-dashboards.yml  test.yml
Docker/dashboards/: myapp-observability.json
Docs/: Dev-Notes.md
Docs/BeforeIntroducingKubernetes/: Guide-DockervsKubernetes.md  Guide-Target observability architecture.md
Docs/WithKurbernetes/: Guide-ApplicationSets-in-ArgoCD.md  Guide-Argo-Rollouts-with-ArgoCD.md  Guide-ArgoCD-Resync-dev_staging_prod.md  Guide-ArgoCD-Why-this-is-GitOps.md  Guide-ArgoCD.md  Guide-Helm-vs-ArgoCD.md  Guide-HowtoEnable-Argo-Rollouts.md  Guide-IntegratingIngress.md  Guide-Kubernetes.md  Guide-MultipleProjects-in-Monorepo-with-kubernetes.md  Guide-Playbook-Grafana-Prometheus-Loki.md  Playbook.md
Docs/WithKurbernetes/runbooks/: rollback.md
apps/: readme
charts/: readme
charts/myapp/: Chart.yaml  values-local.yaml  values.yaml
charts/myapp/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rollout.yaml  secret.yaml  service.yaml
charts/mylearning/: .helmignore  values.yaml
charts/postgres/: Chart.yaml  values.yaml
charts/postgres/templates/: _helpers.tpl  postgres-deployment.yaml  postgres-service.yaml
environments/: readme
environments/dev/: values-myapp.yaml  values-mylearning.yaml
environments/prod/: values-myapp.yaml  values-mylearning.yaml
environments/staging/: values-myapp.yaml  values-mylearning.yaml
gitops/: Readme-appset-logging-yaml.md  Readme-appset-monitoring-yaml.md  Readme-argocd-appset-cluster-monitoring.md  argocd-app-promtail-dev.yaml  argocd-appset-cluster-monitoring.yaml  argocd-appset-logging.yaml  argocd-appset-monitoring.yaml  argocd-appset-monitoring.yaml.disabled  argocd-appset-myapp.yaml  argocd-appset-promtail.yaml  readme
gitops/argocd/: Readme-argocd-cm copy.md  Readme-argocd-rbac-cm.md  argocd-cm.yaml  argocd-rbac-cm.yaml
hack/: check-grafana-dashboards-classic.sh
infra/: reamde  reamde.md
infra/k8s/ingress/: myapp-dev-ingress.yaml
infra/k8s/logging/: loki-stack-values-dev.yaml  loki-stack-values-prod.yaml  loki-stack-values-staging.yaml  promtail-values-dev.yaml  secret-loki-s3-prod.yaml  secret-loki-s3-staging.yaml
infra/k8s/monitoring/: Chart.yaml  Readme-values.md  grafana-dashboards-infra-dev.yaml  grafana-dashboards-infra-staging.yaml  grafana-dashboards-myapp-dev.yaml  grafana-dashboards-myapp-staging.yaml  kube-prometheus-stack-values-dev.yaml  kube-prometheus-stack-values-prod.yaml  kube-prometheus-stack-values-staging.yaml  readme  tmp-grafana-admin-secret-prod.md  tmp-grafana-admin-secret-staging.md  values.yaml
infra/k8s/monitoring/base/: kps-minikube-dev.yaml
infra/k8s/monitoring/crds/: kube-prometheus-stack-crds-core.yaml
infra/k8s/monitoring/grafana/: admin-secret-dev.yaml
infra/k8s/monitoring/grafana/configmaps/: grafana-dashboards-infra-dev.yaml  grafana-dashboards-infra-prod.yaml  grafana-dashboards-infra-staging.yaml  grafana-dashboards-myapp-dev.yaml  grafana-dashboards-myapp-prod.yaml  grafana-dashboards-myapp-staging.yaml
infra/k8s/monitoring/grafana/dashboards/prod/infra/: home.json  k8s-overview.json
infra/k8s/monitoring/grafana/dashboards/prod/myapp/: myapp-overview.json  myapp-slo.json
infra/k8s/monitoring/grafana/dashboards/staging/infra/: home.json  k8s-overview.json
infra/k8s/monitoring/grafana/datasources/: grafana-datasource-dev.yaml  loki-datasource-dev.yaml  loki-datasource-staging.yaml
infra/k8s/monitoring/templates/: Readme-grafana-dashboards-infra-dev.md  alertmanager-config-prod.yaml  alertmanager-config-staging.yaml  grafana-admin-secret-dev.yaml  grafana-dashboards-provisioning-dev.yaml  grafana-datasource-dev.yaml  grafana-datasource-staging.yaml.disabled  grafana-deployment-dev.yaml  grafana-deployment-dev.yaml.disabled  grafana-pvc-dev.yaml  grafana-pvc-dev.yaml.disabled  grafana-role-dev.yaml  grafana-rolebinding-dev.yaml  grafana-service-dev.yaml.disabled  grafana-serviceaccount-dev.yaml.disabled  myapp-rollouts-analysis.yaml  prometheus-configmap-dev.yaml  prometheus-deployment-dev.yaml  prometheus-pvc-dev.yaml.disabled  prometheus-rbac-dev.yaml.disabled  prometheus-service-dev.yaml.disabled  prometheus-serviceaccount-dev.yaml
infra/k8s/monitoring/templates/grafana/: grafana-ingress-dev.yaml  grafana-ini-configmap.yaml
infra/k8s/monitoring/templates/networkpolicies/: grafana-networkpolicy-dev.yaml
infra/k8s/namespaces/: logging.yaml  monitoring-quota-dev.yaml  monitoring.yaml
infra/k8s/resourcequota/: monitoring-quota-dev.yaml
infra/k8s/rules/: myapp-rollouts-analysis.yaml  readme
infra/k8s/rules/myapp-alerts/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
infra/k8s/rules/myapp-alerts/templates/: prometheus-rules-base.yaml  prometheus-rules-slo.yaml
myapp/: .safety-project.ini  Dockerfile  Dockerfile_backup  Playbook-OpenTelemetryIntegrationInFastAPI-and-Uptrace.md  Playbook-PrometheusAndGrafanaIntegration.md  Playbook-TestLogging.md  pyproject.toml
myapp/src/myapp/: logging_config.py  main.py
myapp/src/myapp/api/v1/: routes.py
myapp/src/myapp/core/: config.py  db.py
myapp/src/myapp/models/: db_models.py  schemas.py
myapp/src/myapp/services/: user_service.py
myapp/tests/: conftest.py  test_db.py  test_health.py
mylearning/: .safety-project.ini  Dockerfile  Dockerfile_backup  Guide-ObservabilityInmylearning.md  Playbook-ObservabilityFormylearning.md  bandit.yml  pyproject.toml
mylearning/src/exercises/: fibonacci.py  health.py  logging_config.py  metrics.py  tracing.py
mylearning/tests/: conftest.py  test_health.py  test_testexcercise.py
postgres-setup/: docker-compose.yml
(+2 files in other folders)
