[project]
name = "myapp"
version = "0.1.0"
description = "sample app"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "openai (>=2.30.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "black (>=26.3.1,<27.0.0)"
]
