# PEP 621 is a Python packaging standard that defines how to store
# a project’s metadata inside pyproject.toml in a uniform way.
# In practice, it means:
#        - You put things like name, version, description, authors, dependencies under a [project] section in pyproject.toml.
#        - Different tools (Poetry, Hatch, PDM, uv, setuptools, etc.) all read that same [project] metadata instead of each inventing its own format.
#        - Because of this standardization, you can switch or mix tools more easily without rewriting your metadata; it’s not “Poetry-only” or “setuptools-only” anymore.

[project]
name = "myapp"
version = "0.1.0"
description = "sample app"
authors = [
    {name = "hcrmclass", email = "hcrmclass@gmail.com"}
]
requires-python = ">=3.11,<4.0"
[tool.poetry.dependencies]
python = "^3.11"

fastapi = ">=0.135.2,<0.136.0"
uvicorn = ">=0.42.0,<0.43.0"
langchain = ">=1.2.13,<2.0.0"
openai = ">=2.30.0,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
sqlalchemy = ">=2.0.48,<3.0.0"
pydantic-settings = ">=2.0"
python-json-logger = ">=2.0.7"
prometheus-client = ">=0.20.0"
opentelemetry-api = ">=1.25.0"
opentelemetry-sdk = ">=1.25.0"
opentelemetry-exporter-otlp = ">=1.25.0"
opentelemetry-instrumentation-fastapi = ">=0.46b0"
opentelemetry-instrumentation-logging = ">=0.46b0"

mylearning = { path = "../mylearning", develop = true }  # mylearning as a dependency of myapp, develop = true means “install this dependency in editable (dev) mode.”

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pytest-xdist (>=3.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "safety (>=3.0.0,<4.0.0)"
]

#pytest config
[tool.pytest.ini_options]
pythonpath = ["src"]
#Register the custom maker (db), sothat pytest can recognize the custome marker
#add a lightweight smoke marker so you can run only health + a small DB test in CI
markers = [
    "db: marks tests that require database",
    "smoke: Fast smoke tests (health, basic DB connectivity, etc.).",
]


##Code Quality
[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008", "E501"] # E501s are on long comments, not code. B008 is for “function call in default arguments,”

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
