[project]
name = "mylearning"
version = "0.1.0"
description = ""
authors = [
  { name = "hcrmclass", email = "hcrmclass@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  # add runtime deps here if you later need any
]

[tool.poetry]
# Enable package mode and tell poetry where the package lives
# because your code lives under src/exercises. That makes import 
# exercises work naturally from tests or other modules.
packages = [
  { include = "exercises", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]