[project]
name = "mylearning"
version = "0.1.0"
description = ""
authors = [
  { name = "hcrmclass", email = "hcrmclass@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  # add runtime deps here if you later need any
]

[tool.poetry]
name = "mylearning"
version = "0.1.0"
# Enable package mode and tell poetry where the package lives
# because your code lives under src/exercises. That makes import
# exercises work naturally from tests or other modules.
packages = [
  { include = "exercises", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest (>=9.0.2,<10.0.0)",
  "pytest-xdist (>=3.0)",
  "ruff (>=0.15.9,<0.16.0)",
  "black (>=26.3.1,<27.0.0)",
  "isort (>=8.0.1,<9.0.0)",
  "mypy (>=1.20.0,<2.0.0)",
  "bandit (>=1.9.4,<2.0.0)",
  "pre-commit (>=4.5.1,<5.0.0)",
  "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

##Code Quality
[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
